--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,9 @@ pluginManagement {
         }
     }
 }
+plugins {
+    id 'org.gradle.toolchains.foojay-resolver-convention' version '1.0.0'
+}
 
 include ':app'
 rootProject.name = "quillpad"
